2 buttons added on main page

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,5 +11,11 @@
     <form action="/import_data" method="post">
         <button type="submit">Import Randomized Data</button>
     </form>
+    <form action="/place_order" method="post">
+        <button type="submit">Place Order (student 1)</button>
+    </form>
+    <form action="/usecase_student2" method="post">
+        <button type="submit">Add order to Employee (student 2)</button>
+    </form>
 </body>
 </html>
