report student 2 + go to menu buttons

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,8 +28,11 @@
         <br>
         <button type="submit">Place Order (student 1)</button>
     </form>
+    <br>
     <form action="/usecase_student2" method="post">
         <button type="submit">Add order to Employee (student 2)</button>
     </form>
+    <br>
+    <a href="/report_student2"><button type="button">View Builder-Yacht Report (student 2)</button></a>
 </body>
 </html>
