--- a/templates/usecase_student2.html
+++ b/templates/usecase_student2.html
@@ -6,6 +6,10 @@
     <title>Assign Order to Employee</title>
 </head>
 <body>
+    <form action="/" method="get">
+        <button type="submit">Go to Menu</button>
+    </form>
+
     <h1>Use Case of Student 2 (Ovsiannikov)</h1>
 
     <!-- Assignment Form -->
