--- a/templates/index.html
+++ b/templates/index.html
@@ -12,45 +12,8 @@
     </form>
 
     <h2>Place a Customer Order</h2>
-    <form action="/place_order" method="post">
-      <label for="name">Customer Name:</label>
-      <input
-        type="text"
-        id="name"
-        name="name"
-        placeholder="Enter your name"
-        required
-      />
-      <br />
-      <label for="email">Customer Email:</label>
-      <input
-        type="email"
-        id="email"
-        name="email"
-        placeholder="Enter your email"
-        required
-      />
-      <br />
-      <label for="model">Yacht Model:</label>
-      <input
-        type="text"
-        id="model"
-        name="model"
-        placeholder="Enter yacht model"
-        required
-      />
-      <br />
-      <label for="length">Yacht Length (in meters):</label>
-      <input
-        type="number"
-        id="length"
-        name="length"
-        placeholder="Enter yacht length"
-        min="10"
-        required
-      />
-      <br />
-      <button type="submit">Place Order (student 1)</button>
+    <form action="/place_order_form" method="get">
+      <button type="submit">Go to Order Form</button>
     </form>
     <h2>View Orders Summary</h2>
     <form action="/orders_summary" method="get">
