--- a/templates/index.html
+++ b/templates/index.html
@@ -25,5 +25,10 @@
     </form>
     <br>
     <a href="/report_student2"><button type="button">View Builder-Yacht Report (student 2)</button></a>
+    <br>
+    <form action="/migrate_data" method="post">
+      <button type="submit">Migrate Data to MongoDB</button>
+  </form>
+  
 </body>
 </html>
