--- a/templates/index.html
+++ b/templates/index.html
@@ -26,9 +26,12 @@
     <br>
     <a href="/report_student2"><button type="button">View Builder-Yacht Report (student 2)</button></a>
     <br>
+    <br>
     <form action="/migrate_data" method="post">
       <button type="submit">Migrate Data to MongoDB</button>
-  </form>
-  
-</body>
+    </form>
+    <br>
+    <!-- Button to navigate to the NoSQL Operations page -->
+    <a href="index_nosql.html"><button type="button">NoSQL Operations</button></a>
+  </body>
 </html>
