sample functions for nosql of student2

--- a/templates/index_nosql.html
+++ b/templates/index_nosql.html
@@ -10,12 +10,12 @@
 
     <h2>Place a Customer Order</h2>
     <form action="/place_order_form_nosql" method="get">
-      <button type="submit">Go to Order Form (NoSQL)</button>
+      <button type="submit">Go to Order Form (NoSQL - Student 1)</button>
     </form>
     
     <h2>View Orders Summary</h2>
     <form action="/orders_summary_nosql" method="get">
-      <button type="submit">Go to Orders Summary (NoSQL)</button>
+      <button type="submit">Go to Orders Summary (NoSQL - Student 1)</button>
     </form>
 
     <br>
