--- a/templates/index.html
+++ b/templates/index.html
@@ -19,16 +19,25 @@
     <form action="/orders_summary" method="get">
       <button type="submit">Go to Orders Summary</button>
     </form>
-    <br>
+    <br />
     <form action="/usecase_student2" method="post">
       <button type="submit">Add order to Employee (student 2)</button>
     </form>
-    <br>
-    <a href="/report_student2"><button type="button">View Builder-Yacht Report (student 2)</button></a>
-    <br>
+    <br />
+    <a href="/report_student2"
+      ><button type="button">View Builder-Yacht Report (student 2)</button></a
+    >
+    <br />
     <form action="/migrate_data" method="post">
       <button type="submit">Migrate Data to MongoDB</button>
-  </form>
-  
-</body>
+    </form>
+    <h2>Place a Customer Order (NoSQL)</h2>
+    <form action="/place_order_form_nosql" method="get">
+      <button type="submit">Go to Order Form (NoSQL)</button>
+    </form>
+    <h2>View Orders Summary (NoSQL)</h2>
+    <form action="/orders_summary_nosql" method="get">
+      <button type="submit">Go to Orders Summary (NoSQL)</button>
+    </form>
+  </body>
 </html>
