--- a/templates/index.html
+++ b/templates/index.html
@@ -11,28 +11,33 @@
       <button type="submit">Import Randomized Data</button>
     </form>
 
-    <h2>Place a Customer Order</h2>
+    <h2>Student 1 (Curanov)</h2>
     <form action="/place_order_form" method="get">
-      <button type="submit">Go to Order Form</button>
+      <button type="submit">Place a Customer Order</button>
     </form>
-    <h2>View Orders Summary</h2>
+    <br>
     <form action="/orders_summary" method="get">
-      <button type="submit">Go to Orders Summary</button>
+      <button type="submit">View Orders Summary</button>
     </form>
     <br />
+    <h2>Student 2 (Ovsiannikov)</h2>
     <form action="/usecase_student2" method="post">
-      <button type="submit">Add order to Employee (student 2)</button>
+      <button type="submit">Add order to Employee</button>
     </form>
     <br>
-    <a href="/report_student2"><button type="button">View Builder-Yacht Report (student 2)</button></a>
+    <a href="/report_student2"><button type="button">View Builder-Yacht Report</button></a>
     <br>
     <br>
+
+    <h2>SQL to MongoDB</h2>
     <form action="/migrate_data" method="post">
       <button type="submit">Migrate Data to MongoDB</button>
     </form>
     <br>
     <!-- Button to navigate to the NoSQL Operations page -->
-    <a href="index_nosql.html"><button type="button">NoSQL Operations</button></a>
+    <a href="/index_nosql"><button type="button">NoSQL Operations</button></a>
+
+
 
   </body>
 </html>
