--- a/templates/index_nosql.html
+++ b/templates/index_nosql.html
@@ -8,17 +8,17 @@
   <body>
     <h1>Yacht Database Management (NoSQL)</h1>
 
-    <h2>Place a Customer Order</h2>
+    <h2>Student 1 (Curanov)</h2>
     <form action="/place_order_form_nosql" method="get">
       <button type="submit">Go to Order Form (NoSQL - Student 1)</button>
     </form>
-    
-    <h2>View Orders Summary</h2>
+    <br>
     <form action="/orders_summary_nosql" method="get">
       <button type="submit">Go to Orders Summary (NoSQL - Student 1)</button>
     </form>
-
     <br>
+
+    <h2>Student 2 (Ovsiannikov)</h2>
     <form action="/usecase_student2_nosql" method="post">
       <button type="submit">Add Order to Employee (NoSQL - Student 2)</button>
     </form>
