usecase in sql gets tables properly

--- a/templates/index_nosql.html
+++ b/templates/index_nosql.html
@@ -19,7 +19,7 @@
     <br>
 
     <h2>Student 2 (Ovsiannikov)</h2>
-    <form action="/usecase_student2_nosql" method="post">
+    <form action="/usecase_student2_nosql" method="get">
       <button type="submit">Add Order to Employee (NoSQL - Student 2)</button>
     </form>
     
