--- a/templates/index_nosql.html
+++ b/templates/index_nosql.html
@@ -6,7 +6,12 @@
     <title>Database Management (NoSQL)</title>
   </head>
   <body>
+    
     <h1>Yacht Database Management (NoSQL)</h1>
+    
+    <form action="/" method="get">
+      <button type="submit">Go to SQL page</button>
+    </form>
 
     <h2>Student 1 (Curanov)</h2>
     <form action="/place_order_form_nosql" method="get">
