--- a/templates/orders_summary_nosql.html
+++ b/templates/orders_summary_nosql.html
@@ -5,6 +5,9 @@
     <title>Orders Summary (NoSQL)</title>
   </head>
   <body>
+    <form action="/index_nosql" method="get">
+      <button type="submit">Go to Menu</button>
+    </form>
     <h1>Orders Summary (NoSQL)</h1>
 
     {% if error_message %}
@@ -51,6 +54,5 @@
       {% endfor %}
     </ul>
 
-    <a href="{{ url_for('home') }}">Back to Home</a>
   </body>
 </html>
