--- a/templates/place_order.html
+++ b/templates/place_order.html
@@ -5,6 +5,9 @@
     <title>Place a Customer Order</title>
   </head>
   <body>
+    <form action="/" method="get">
+      <button type="submit">Go to Menu</button>
+    </form>
     <h1>Place a Customer Order</h1>
 
     {% if error_message %}
@@ -56,7 +59,5 @@
       <button type="submit">Place Order</button>
     </form>
 
-    <br />
-    <a href="{{ url_for('home') }}">Back to Home</a>
   </body>
 </html>
