--- a/templates/report_student2_nosql.html
+++ b/templates/report_student2_nosql.html
@@ -6,7 +6,7 @@
     <title>Builder-Yacht Report</title>
 </head>
 <body>
-    <form action="/" method="get">
+    <form action="/index_nosql" method="get">
         <button type="submit">Go to Menu</button>
     </form>
     <h1>Builder-Yacht Report</h1>
