--- a/templates/usecase_student2_nosql.html
+++ b/templates/usecase_student2_nosql.html
@@ -4,6 +4,9 @@
     <title>Use Case in NoSQL of Student 2 (Ovsiannikov)</title>
 </head>
 <body>
+    <form action="/index_nosql" method="get">
+        <button type="submit">Go to Menu</button>
+    </form>
     <h1>Use Case in NoSQL of Student 2 (Ovsiannikov)</h1>
 
     <!-- Form to assign builder to an order -->
